--- a/src/postorius/templates/postorius/lists/members.html
+++ b/src/postorius/templates/postorius/lists/members.html
@@ -12,7 +12,7 @@
 
     {% list_nav 'list_members' page_title page_subtitle %}
 
-    {% if role != 'subscriber' %}
+    {% if role != 'member' %}
         <form action="{% url 'list_members' list.list_id role %}" method="post" class="form-inline margin-bottom">
             {% csrf_token %}
             <div class="form-group {% if member_form.email.errors %}has-error{% endif %}">
@@ -33,7 +33,7 @@
         </form>
     {% endif %}
 
-    {% if role == 'subscriber' and members|length > 0 %}
+    {% if members|length > 0 %}
         {% if form.choices.errors %}
             <div class="alert alert-danger">{{ form.choices.errors }}</div>
         {% endif %}
@@ -50,7 +50,7 @@
     {% endif %}
 
     {% if members|length > 0 %}
-        {% if role == 'subscriber' %}
+        {% if role == 'member' %}
             <form action="{% url 'list_members' list.list_id role %}" method="post" id="unsubscribe-form">
             {% csrf_token %}
             <input type="submit" class="hidden" />
@@ -66,8 +66,8 @@
                 <table class="table table-bordered table-striped">
                     <thead>
                         <tr>
-                            <th colspan="2">
-                              {% if role == 'subscriber' %}
+                            <th colspan="3">
+                              {% if role == 'member' %}
                                     <input type="checkbox" id="all-members-checkbox" aria-label="Select all members" />
                               {% endif %}
                               {% trans 'Address' %}
@@ -77,7 +77,7 @@
                     <tbody>
                         {% for member in members %}
                             <tr>
-                                {% if role == 'subscriber' %}
+                                {% if role == 'member' %}
                                   <td>
                                     <label class="checkbox-inline">
                                     <input type="checkbox" class="member-checkbox" name="choices" id="id_choices_{{ forloop.counter0 }}" value="{{ member.email }}" />
@@ -91,6 +91,19 @@
                                   <td>
                                     <a href="{% url 'list_member_options' list.list_id member.email %}">{% trans 'Member Options' %}</a>
                                   </td>
+                                {% elif role == 'nonmember' %}
+                                  <td>
+                                        {% if member.display_name %}
+                                            "{{ member.display_name }}" &lt;{{ member.email }}&gt;
+                                        {% else %}
+                                            {{ member.email }}
+                                        {% endif %}
+                                    </label>
+                                  </td>
+                                  <td>
+                                    <a href="{% url 'list_member_options' list.list_id member.email %}">{% trans 'Non-member Options' %}</a>
+                                  </td>
+                                  <td><a href="{% url 'remove_role' list.list_id role member.email %}" class="btn btn-xs btn-danger">{% trans 'Delete' %}</a></td>
                                 {% else %}
                                     <td>
                                         {% if member.display_name %}
@@ -106,10 +119,10 @@
                     </tbody>
                 </table>
             </div>
-        {% if role == 'subscriber' %}
+        {% if role == 'member' or role == 'nonmember' %}
             </form>
-            {% paginator members %}
         {% endif %}
+        {% paginator members %}
     {% else %}
         <p>{{ empty_error }}</p>
     {% endif %}
