Render list info using markdown renderer.

--- a/src/postorius/templates/postorius/lists/summary.html
+++ b/src/postorius/templates/postorius/lists/summary.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% load bootstrap_tags %}
 {% load nav_helpers %}
+{% load markdown %}
 
 {% block head_title %}
 {% trans 'Info' %} | {{ list.fqdn_listname }} - {{ block.super }}
@@ -13,7 +14,9 @@
 
     <p>{{ list.settings.description }}</p>
     {% if list.settings.info %}
-    <p><pre style="white-space: pre-wrap; word-break: normal; border: none; background: none;">{{ list.settings.info }}</pre></p>
+        {% autoescape off %}
+          {% markdown_value list.settings.info %}
+        {% endautoescape %}
     {% endif %}
     <p>{% trans 'To contact the list owners, use the following email address:' %} <em>{{ list.settings.owner_address }}</em></p>
 
