Add support to see subscription requests pending user confirmation.

--- a/src/postorius/templates/postorius/lists/pending_confirmations.html
+++ b/src/postorius/templates/postorius/lists/pending_confirmations.html
@@ -4,7 +4,7 @@
 {% load pagination %}
 
 {% block head_title %}
-{% trans 'Subscription requests' %} | {{ list.fqdn_listname }} - {{ block.super }}
+{{ page_title }} | {{ list.fqdn_listname }} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
@@ -25,8 +25,6 @@
                     <tr>
                         <td>{{ request.email }}</td>
                         <td>
-                            <a href="{% url 'handle_subscription_request' list.list_id request.token 'accept' %}" class="btn btn-xs btn-success">{% trans 'Accept' %}</a>
-                            <a href="{% url 'handle_subscription_request' list.list_id request.token 'reject' %}" class="btn btn-xs btn-danger">{% trans 'Reject' %}</a>
                             <a href="{% url 'handle_subscription_request' list.list_id request.token 'discard' %}" class="btn btn-xs btn-danger">{% trans 'Discard' %}</a>
                             <a href="{% url 'list_bans' list.list_id %}?email={{ request.email }}" class="btn btn-xs btn-danger">{% trans 'Ban' %}</a>
                         </td>
