--- a/src/postorius/templates/postorius/menu/list_nav.html
+++ b/src/postorius/templates/postorius/menu/list_nav.html
@@ -8,8 +8,24 @@
 <ul class="nav nav-pills" role="tablist">
     <li role="tab" class="{% nav_active_class current 'list_summary' %}"><a href="{% url 'list_summary' list.list_id %}">{% trans 'Info' %}</a></li>
     {% if user.is_superuser or user.is_list_owner or user.is_list_moderator %}
-        <li role="tab" class="{% nav_active_class current 'list_subscription_requests' %}"><a href="{% url 'list_subscription_requests' list.list_id %}">{% trans 'Subscription requests' %}</a></li>
-        <li role="tab" class="{% nav_active_class current 'list_held_messages' %}"><a href="{% url 'list_held_messages' list.list_id %}">{% trans 'Held messages' %}</a></li>
+    <li role="tab" class="{% nav_active_class current 'list_subscription_requests' %} dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+         aria-expanded="false">{% trans 'Subscription requests' %}<span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li><a href="{% url 'list_subscription_requests' list.list_id %}">
+            {% trans 'Pending Approval' %}
+        </a></li>
+        <li><a href="{% url 'list_pending_confirmation' list.list_id %}">
+            {% trans 'Pending Confirmation' %}
+        </a></a>
+      </ul>
+    </li>
+    <li role="tab" class="{% nav_active_class current 'list_held_messages' %}">
+      <a href="{% url 'list_held_messages' list.list_id %}">
+        {% trans 'Held messages' %}
+      </a>
+    </li>
     {% endif %}
     {% if user.is_superuser or user.is_list_owner %}
         <li role="tab" class="{% nav_active_class current 'list_members' %} dropdown">
@@ -19,7 +35,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a href="{% url 'list_members' list.list_id 'member' %}">{% trans 'Members' %}</a></li>
-              <li><a href="{% url 'list_members' list.list_id 'nonmember' %}">{% trans 'Non-Members' %}</a></li>              
+              <li><a href="{% url 'list_members' list.list_id 'nonmember' %}">{% trans 'Non-Members' %}</a></li>
               <li><a href="{% url 'list_members' list.list_id 'moderator' %}">{% trans 'Moderators' %}</a></li>
               <li><a href="{% url 'list_members' list.list_id 'owner' %}">{% trans 'Owners' %}</a></li>
             </ul>
