Add TimezoneMIddleware to example settings for Postorius.

--- a/src/postorius/templates/postorius/base.html
+++ b/src/postorius/templates/postorius/base.html
@@ -119,6 +119,10 @@
                 <a href="http://list.org">GNU Mailman</a>
                 &bull;
                 {% trans 'Postorius Version' %} {{ POSTORIUS_VERSION }}
+                {% if mailman_day %}
+                &bull;
+                {% trans 'Happy Mailman Day!' %}
+                {% endif %}
             </p>
         </div>
     </footer>
