Fix HTML coverage report caching using Gitlab Pages.
Also, fix some warnings in Django.

--- a/src/postorius/templates/postorius/lists/held_messages.html
+++ b/src/postorius/templates/postorius/lists/held_messages.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load nav_helpers %}
 {% load pagination %}
-{% load staticfiles %}
+{% load static %}
 
 {% block head_title %}
 {% trans 'Held messages' %} | {{ list.fqdn_listname }} - {{ block.super }}
