--- a/src/postorius/templates/postorius/menu/list_nav.html
+++ b/src/postorius/templates/postorius/menu/list_nav.html
@@ -10,7 +10,9 @@
     {% if user.is_superuser or user.is_list_owner or user.is_list_moderator %}
     <li role="tab" class="{% nav_active_class current 'list_subscription_requests' %} dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-         aria-expanded="false">{% trans 'Subscription requests' %}<span class="caret"></span>
+         aria-expanded="false">
+        {% trans 'Subscription requests' %}<span class="badge">{{ list|pending_subscriptions }}</span>
+        <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
         <li><a href="{% url 'list_subscription_requests' list.list_id %}">
@@ -23,7 +25,7 @@
     </li>
     <li role="tab" class="{% nav_active_class current 'list_held_messages' %}">
       <a href="{% url 'list_held_messages' list.list_id %}">
-        {% trans 'Held messages' %}
+        {% trans 'Held messages' %}<span class="badge"> {{ list|held_count }}</span>
       </a>
     </li>
     {% endif %}
