--- a/src/postorius/templates/postorius/domain/index.html
+++ b/src/postorius/templates/postorius/domain/index.html
@@ -38,9 +38,9 @@
                             {% for owner in domain.owners %}
                             <li>
                               {{ owner|owner_repr }}
-                              <form action="" method="post" class="form-inline">
+                              <form action="{% url 'remove_domain_owner' domain=domain.mail_host user_id=owner.user_id %}" method="post" class="form-inline">
                                 {% csrf_token %}
-                                <a href="{% url 'remove_domain_owner' domain=domain.mail_host user_id=owner.user_id %}">({% trans 'remove' %})</a>
+                                <button href="#" type="submit" class="btn btn-xs">({% trans 'remove' %})</button>
                               </form>
                             </li>
                             {% endfor %}
