--- a/src/postorius/templates/postorius/menu/list_nav.html
+++ b/src/postorius/templates/postorius/menu/list_nav.html
@@ -11,7 +11,7 @@
     <li role="tab" class="{% nav_active_class current 'list_subscription_requests' %} dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
          aria-expanded="false">
-        {% trans 'Subscription requests' %}<span class="badge">{{ list|pending_subscriptions }}</span>
+        {% trans 'Subscription requests' %} <span class="label label-default">{{ list|pending_subscriptions }} </span>
         <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
@@ -25,7 +25,7 @@
     </li>
     <li role="tab" class="{% nav_active_class current 'list_held_messages' %}">
       <a href="{% url 'list_held_messages' list.list_id %}">
-        {% trans 'Held messages' %}<span class="badge"> {{ list|held_count }}</span>
+        {% trans 'Held messages' %} <span class="label label-default"> {{ list|held_count }} </span>
       </a>
     </li>
     {% endif %}
@@ -55,7 +55,7 @@
             </ul>
         </li>
 
-        <li role="tab" class="{% nav_active_class current 'list_bans' %}"><a href="{% url 'list_bans' list.list_id %}">{% trans 'Banned addresses' %}</a></li>
+        <li role="tab" class="{% nav_active_class current 'list_bans' %}"><a href="{% url 'list_bans' list.list_id %}">{% trans 'Ban List' %}</a></li>
         <li role="tab" class="{% nav_active_class current 'list_header_matches' %}"><a href="{% url 'list_header_matches' list.list_id %}">{% trans 'Header filters' %}</a></li>
         <li role="tab" class="{% nav_active_class current 'list_delete' %}"><a href="{% url 'list_delete' list.list_id %}">{% trans 'Delete' %}</a></li>
     {% endif %}
