--- a/src/postorius/templates/postorius/lists/confirm_removeall_subscribers.html
+++ b/src/postorius/templates/postorius/lists/confirm_removeall_subscribers.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-    {% list_nav 'mass_removal' 'Confirm Removal of All Members' %}
+    {% list_nav 'mass_removal' 'msgid:title:list_mass_removal_confirm' %}
 
     <p>
     {% blocktrans with listname=list.fqdn_listname %}
