--- a/src/postorius/templates/postorius/lists/settings.html
+++ b/src/postorius/templates/postorius/lists/settings.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-    {% list_nav 'list_settings' 'List Settings' %}
+    {% list_nav 'list_settings' 'msgid:title:list_settings' %}
 
     <ul class="nav nav-tabs margin-bottom" role="tablist">
         {% for section in section_names %}
