--- a/src/postorius/templates/postorius/lists/summary.html
+++ b/src/postorius/templates/postorius/lists/summary.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-    {% list_nav 'list_summary' 'Summary' %}
+    {% list_nav 'list_summary' 'msgid:title:list_summary' %}
 
     <p>{{ list.settings.description }}</p>
     {% if list.settings.info %}
