--- a/src/postorius/templates/postorius/lists/template_list.html
+++ b/src/postorius/templates/postorius/lists/template_list.html
@@ -9,7 +9,7 @@
 
 {% block content  %}
 
-    {% list_nav 'templates' 'Templates' %}
+    {% list_nav 'templates' 'msgid:title:list_templates' %}
 
 <p class="text-right"><a href="{% url 'list_template_new' list.list_id %}" class="btn btn-success">{% trans 'New Template' %}</a></p>
 
