--- a/src/postorius/templates/postorius/lists/template_update.html
+++ b/src/postorius/templates/postorius/lists/template_update.html
@@ -8,7 +8,7 @@
 {% endblock head_title %}
 
 {% block content  %}
-    {% list_nav 'templates' 'Templates' %}
+    {% list_nav 'templates' 'msgid:title:list_templates' %}
 
 
 <h3>Edit {{ object.description }} </h3>
