--- a/src/postorius/templates/postorius/user/list_options.html
+++ b/src/postorius/templates/postorius/user/list_options.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="user-profile">
-    {% user_nav 'settings_list' 'Subscription settings' %}
+    {% user_nav 'settings_list' 'msgid:title:user_settings_list' %}
 
     <h2 class="margin-bottom">{% trans 'Subscription options for' %} <strong>{{ mlist.fqdn_listname }}</strong></h2>
     <hr />
