--- a/src/postorius/templates/postorius/user/mailman_settings.html
+++ b/src/postorius/templates/postorius/user/mailman_settings.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <div class="user-profile">
-    {% user_nav 'settings_global' 'Global settings' %}
+    {% user_nav 'settings_global' 'msgid:title:user_settings_global' %}
 
     {% if not mm_user %}
         <div>
