--- a/src/postorius/templates/postorius/user/subscription_preferences.html
+++ b/src/postorius/templates/postorius/user/subscription_preferences.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <div class="user-profile">
-    {% user_nav 'settings_list' 'Subscription settings' %}
+    {% user_nav 'settings_list' 'msgid:title:user_settings_list' %}
 
     {% if formset|length == 0 %}
       <div>
