--- a/src/postorius/templates/postorius/user/subscriptions.html
+++ b/src/postorius/templates/postorius/user/subscriptions.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <div class="user-profile">
-    {% user_nav 'subscriptions' 'List Subscriptions' %}
+    {% user_nav 'subscriptions' 'msgid:title:user_subscriptions' %}
 
     {% if memberships %}
         <p>{% trans 'You are subscribed to the following mailing lists:' %}</p>
