--- a/src/postorius/templates/postorius/lists/confirm_delete.html
+++ b/src/postorius/templates/postorius/lists/confirm_delete.html
@@ -8,7 +8,7 @@
 {% load nav_helpers %}
 
 {% block content %}
-    {% list_nav 'list_delete' 'Delete List' %}
+    {% list_nav 'list_delete' 'msgid:title:list_delete' %}
 
     <p>{% trans 'Are you sure you want to permanently delete this list?' %}</p>
     <p>{% trans 'All settings and membership data will be lost!' %}</p>
