--- a/src/postorius/templates/postorius/lists/mass_removal.html
+++ b/src/postorius/templates/postorius/lists/mass_removal.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-    {% list_nav 'list_mass_ops' 'Mass Removal' %}
+    {% list_nav 'list_mass_ops' 'msgid:title:list_mass_removal' %}
 
     <form action="{% url 'mass_removal' list.list_id %}" method="post" class="form-horizontal">
         {% bootstrap_form_horizontal form 2 8 %}
