--- a/src/postorius/templates/postorius/lists/template_delete.html
+++ b/src/postorius/templates/postorius/lists/template_delete.html
@@ -8,7 +8,7 @@
 {% endblock head_title %}
 
 {% block content  %}
-    {% list_nav 'templates' 'Templates' %}
+    {% list_nav 'templates' 'msgid:title:list_templates' %}
 
 <form action="" method="post">
   {% csrf_token %}
