Show template's file names more prominently to Users.
This in selection list where admins can pick individual
templates for customization, it is good to have access
to the file name so admins can customize the right
template.

--- a/src/postorius/templates/postorius/domain/template_add.html
+++ b/src/postorius/templates/postorius/domain/template_add.html
@@ -14,7 +14,9 @@
     </div>
 
     {% if object %}
-        <h3> {{ object.description }} </h3>
+    <h3> Template '{{ object.name }}'<br />
+        <small>{{ object.description }}</small>
+    </h3>
     {% endif %}
 
     <form action="" method="post" class="form-group">
