--- a/src/postorius/templates/postorius/domain/template_index.html
+++ b/src/postorius/templates/postorius/domain/template_index.html
@@ -28,7 +28,7 @@
           <tbody>
             {% for template in object_list %}
             <tr>
-              <td> {{ template.description }}</td>
+              <td> <b>[{{ template.name }}]</b> - {{ template.description }}</td>
               <td>
                 <a class="btn btn-xs btn-primary" href="{% url 'domain_template_update' domain.mail_host template.id %}">{% trans 'Edit' %}</a>
                 <a class="btn btn-xs btn-danger" href="{% url 'domain_template_delete' domain.mail_host template.id %}">{% trans 'Delete' %}</a>
