--- a/src/postorius/templates/postorius/lists/template_delete.html
+++ b/src/postorius/templates/postorius/lists/template_delete.html
@@ -10,9 +10,14 @@
 {% block content  %}
     {% list_nav 'templates' 'msgid:title:list_templates' %}
 
+<h3>Template '{{ object.name }}'<br />
+    <small>{{ object.description }}</small>
+</h3>
+
 <form action="" method="post">
   {% csrf_token %}
-  <p>Are you sure you want to delete "{{ object.description }}"?</p>
+  <p>Are you sure you want to delete the "{{ object.name }}" template
+     from list "{{ object.identifier }}"?</p>
   <input class="btn btn-danger" type="submit" value="Confirm" />
   <a class="btn btn-info" href="{{ view.success_url }}">Cancel</a>
 
