--- a/src/postorius/templates/postorius/lists/template_list.html
+++ b/src/postorius/templates/postorius/lists/template_list.html
@@ -27,7 +27,7 @@
       <tbody>
         {% for template in object_list %}
         <tr>
-          <td> {{ template.description }}</td>
+          <td> <b>[{{ template.name }}]</b> - {{ template.description }}</td>
           <td> <a class="btn btn-xs btn-primary" href="{% url 'list_template_update' list.list_id template.id %}">{% trans 'Edit' %}</a>
             <a class="btn btn-xs btn-danger" href="{% url 'list_template_delete' list.list_id template.id %}">{% trans 'Delete' %}</a>
           </td>
