--- a/src/postorius/templates/postorius/domain/template_delete.html
+++ b/src/postorius/templates/postorius/domain/template_delete.html
@@ -8,21 +8,24 @@
 
 {% block content  %}
     <div class="page-header">
-      <h1>Delete Template
+      <h1>{% trans 'Delete Template' %}
         <small>{{ domain.mail_host }}</small>
       </h1>
     </div>
 
-    <h3>Template '{{ object.name }}'<br />
+    <h3>{% blocktrans %}Template '{{ object.name }}'{% endblocktrans %}<br />
         <small>{{ object.description }}</small>
     </h3>
 
     <form action="" method="post">
         {% csrf_token %}
-        <p>Are you sure you want to delete the "{{ object.name }}" template
-           for domain "{{ object.identifier }}"?</p>
-        <input class="btn btn-danger" type="submit" value="Confirm" />
-        <a class="btn btn-info" href="{{ view.success_url }}">Cancel</a>
+        <p>{% blocktrans %}
+           Are you sure you want to delete the "{{ object.name }}" template
+           for domain "{{ object.identifier }}"?
+           {% endblocktrans %}
+        </p>
+        <input class="btn btn-danger" type="submit" value="{% trans 'Confirm' %}" />
+        <a class="btn btn-info" href="{{ view.success_url }}">{% trans 'Cancel' %}</a>
 
     </form>
 
