--- a/src/postorius/templates/postorius/domain/template_index.html
+++ b/src/postorius/templates/postorius/domain/template_index.html
@@ -8,7 +8,7 @@
 
 {% block content  %}
     <div class="page-header">
-      <h1>Templates
+      <h1>{% trans 'Templates' %}
         <small>{{ domain.mail_host }}</small>
       </h1>
     </div>
@@ -41,7 +41,7 @@
 
     {% else %}
 
-    <p>No Templates.</p>
+    <p>{% trans 'No Templates.' %}</p>
 
     {% endif %}
 
