--- a/src/postorius/templates/postorius/lists/template_delete.html
+++ b/src/postorius/templates/postorius/lists/template_delete.html
@@ -10,16 +10,19 @@
 {% block content  %}
     {% list_nav 'templates' 'msgid:title:list_templates' %}
 
-<h3>Template '{{ object.name }}'<br />
+<h3>{% blocktrans %}Template '{{ object.name }}'{% endblocktrans %}<br />
     <small>{{ object.description }}</small>
 </h3>
 
 <form action="" method="post">
   {% csrf_token %}
-  <p>Are you sure you want to delete the "{{ object.name }}" template
-     from list "{{ object.identifier }}"?</p>
-  <input class="btn btn-danger" type="submit" value="Confirm" />
-  <a class="btn btn-info" href="{{ view.success_url }}">Cancel</a>
+  <p>{% blocktrans %}
+     Are you sure you want to delete the "{{ object.name }}" template
+     from list "{{ object.identifier }}"?
+     {% endblocktrans %}
+  </p>
+  <input class="btn btn-danger" type="submit" value="{% trans 'Confirm' %}" />
+  <a class="btn btn-info" href="{{ view.success_url }}">{% trans 'Cancel' %}</a>
 
 </form>
 
