Bind object attributes to local variants in blocktrans.
Object attributes are not accessible in blocktrans and should
be instead bound to local variables using `with` syntax.

--- a/src/postorius/templates/postorius/domain/template_add.html
+++ b/src/postorius/templates/postorius/domain/template_add.html
@@ -14,7 +14,7 @@
     </div>
 
     {% if object %}
-    <h3>{% blocktrans %}Template '{{ object.name }}'{% endblocktrans %}<br />
+    <h3>{% blocktrans with name=object.name %}Template '{{ name }}'{% endblocktrans %}<br />
         <small>{{ object.description }}</small>
     </h3>
     {% endif %}
