--- a/src/postorius/templates/postorius/domain/template_delete.html
+++ b/src/postorius/templates/postorius/domain/template_delete.html
@@ -13,15 +13,15 @@
       </h1>
     </div>
 
-    <h3>{% blocktrans %}Template '{{ object.name }}'{% endblocktrans %}<br />
+    <h3>{% blocktrans with name=object.name %}Template '{{ name }}'{% endblocktrans %}<br />
         <small>{{ object.description }}</small>
     </h3>
 
     <form action="" method="post">
         {% csrf_token %}
-        <p>{% blocktrans %}
-           Are you sure you want to delete the "{{ object.name }}" template
-           for domain "{{ object.identifier }}"?
+        <p>{% blocktrans with name=object.name identifier=object.identifier %}
+           Are you sure you want to delete the "{{ name }}" template
+           for domain "{{ identifier }}"?
            {% endblocktrans %}
         </p>
         <input class="btn btn-danger" type="submit" value="{% trans 'Confirm' %}" />
