--- a/src/postorius/templates/postorius/lists/template_delete.html
+++ b/src/postorius/templates/postorius/lists/template_delete.html
@@ -10,15 +10,15 @@
 {% block content  %}
     {% list_nav 'templates' 'msgid:title:list_templates' %}
 
-<h3>{% blocktrans %}Template '{{ object.name }}'{% endblocktrans %}<br />
+<h3>{% blocktrans with name=object.name %}Template '{{ name }}'{% endblocktrans %}<br />
     <small>{{ object.description }}</small>
 </h3>
 
 <form action="" method="post">
   {% csrf_token %}
-  <p>{% blocktrans %}
-     Are you sure you want to delete the "{{ object.name }}" template
-     from list "{{ object.identifier }}"?
+  <p>{% blocktrans with name=object.name identifier=object.identifier%}
+     Are you sure you want to delete the "{{ name }}" template
+     from list "{{ identifier }}"?
      {% endblocktrans %}
   </p>
   <input class="btn btn-danger" type="submit" value="{% trans 'Confirm' %}" />
