--- a/src/postorius/templates/postorius/index.html
+++ b/src/postorius/templates/postorius/index.html
@@ -61,10 +61,14 @@
                         <tr>
                             <td>
                                 <a href="{% url 'list_summary' list_id=list.list_id %}">{{ list.display_name }}</a>
-                                {% if user.is_superuser and not list.settings.advertised %} ({% trans 'unadvertised' %}*){% endif %}
+                                {% if check_advertised %}
+                                  {% if user.is_superuser and not list.settings.advertised %}
+                                    ({% trans 'unadvertised' %}*)
+                                  {% endif %}
+                                {% endif %}
                             </td>
                             <td>{{ list.fqdn_listname }}</td>
-                            <td>{{ list.settings.description }}</td>
+                            <td>{{ list.description }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
