--- a/src/postorius/templates/postorius/lists/mass_removal.html
+++ b/src/postorius/templates/postorius/lists/mass_removal.html
@@ -12,7 +12,8 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-8">
                 <button class="btn btn-warning" type="submit">{% trans 'Unsubscribe users' %}</button>
-                <a href="{% url 'unsubscribe_all' list.list_id %}" class="btn btn-danger pull-right">
+                <hr>
+                <a href="{% url 'unsubscribe_all' list.list_id %}" class="btn btn-danger">
                     {% trans 'Unsubscribe All' %}</a>
             </div>
         </div>
