--- a/src/postorius/templates/postorius/lists/bans.html
+++ b/src/postorius/templates/postorius/lists/bans.html
@@ -45,7 +45,7 @@
                     <input type="hidden" name="email" value="{{ ban.email }}" />
                     <button class="btn btn-danger btn-xs" type="submit" name="del"
                             title="{% trans 'Un-ban this address' %}">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                        <span class="fa fa-remove" aria-hidden="true"></span>
                     </button>
                 </form>
                 </td>
