--- a/src/postorius/templates/postorius/lists/confirm_delete.html
+++ b/src/postorius/templates/postorius/lists/confirm_delete.html
@@ -21,7 +21,7 @@
                 Delete {{ listname }}
                 {% endblocktrans %}
             </button>
-            <a class="btn btn-default" href="{% url 'list_summary' list_id=list.list_id %}">
+            <a class="btn btn-success" href="{% url 'list_summary' list_id=list.list_id %}">
                 {% trans 'Cancel' %}
             </a>
         </div>
