--- a/src/postorius/templates/postorius/lists/header_matches.html
+++ b/src/postorius/templates/postorius/lists/header_matches.html
@@ -36,8 +36,8 @@
                     {% if field.name == 'ORDER' %}
                     <td class="order">
                         {{ field|add_form_control }}
-                        <a href="" class="up"><span class="glyphicon glyphicon-arrow-up"></span></a>
-                        <a href="" class="down"><span class="glyphicon glyphicon-arrow-down"></span></a>
+                        <a href="" class="up"><span class="fa fa-arrow-up"></span></a>
+                        <a href="" class="down"><span class="fa fa-arrow-down"></span></a>
                     {% else %}
                     <td>
                         {{ field|add_form_control }}
