--- a/src/postorius/templates/postorius/menu/user_nav.html
+++ b/src/postorius/templates/postorius/menu/user_nav.html
@@ -4,8 +4,8 @@
 <h1>{% trans 'Mailman Settings' %} <small>{{ user }}</small></h1>
 
 <ul class="nav nav-tabs margin-bottom" role="tablist">
-    <li role="tab" class="{% nav_active_class current 'subscriptions' %}"><a href="{% url 'ps_user_profile' %}">{% trans 'Subscriptions' %}</a></li>
-    <li role="tab" class="{% nav_active_class current 'settings_global' %}"><a href="{% url 'user_mailmansettings' %}">{% trans 'Global Mailman preferences' %}</a></li>
-    <li role="tab" class="{% nav_active_class current 'settings_address' %}"><a href="{% url 'user_address_preferences' %}">{% trans 'Address-based preferences' %}</a></li>
-    <li role="tab" class="{% nav_active_class current 'settings_list' %}"><a href="{% url 'user_subscription_preferences' %}">{% trans 'List-based preferences' %}</a></li>
+    <li role="tab" class="nav-item"><a class="nav-link {% nav_active_class current 'subscriptions' %}" href="{% url 'ps_user_profile' %}">{% trans 'Subscriptions' %}</a></li>
+    <li role="tab" class="nav-item"><a class="nav-link {% nav_active_class current 'settings_global' %}" href="{% url 'user_mailmansettings' %}">{% trans 'Global Mailman preferences' %}</a></li>
+    <li role="tab" class="nav-item"><a class="nav-link {% nav_active_class current 'settings_address' %}" href="{% url 'user_address_preferences' %}">{% trans 'Address-based preferences' %}</a></li>
+    <li role="tab" class="nav-item"><a class="nav-link {% nav_active_class current 'settings_list' %}" href="{% url 'user_subscription_preferences' %}">{% trans 'List-based preferences' %}</a></li>
 </ul>
