--- a/src/postorius/templates/postorius/lists/members.html
+++ b/src/postorius/templates/postorius/lists/members.html
@@ -29,7 +29,7 @@
                 {{ member_form.display_name.label_tag }}
                 {{ member_form.display_name|add_form_control }}
             </div>
-            <button type="submit" class="btn btn-default">{{ form_action }}</button>
+            <button type="submit" class="btn btn-primary">{{ form_action }}</button>
         </form>
     {% endif %}
 
@@ -43,7 +43,7 @@
             <div class="input-group">
                 <input type="text" name="q" value="{{ query }}" class="form-control" placeholder="{% trans 'Search members...' %}" aria-label="Search box" />
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="submit" aria-label="Search"><span class="glyphicon glyphicon-search"></span></button>
+                    <button class="btn btn-outline-primary" type="submit" aria-label="Search"><span class="fa fa-search"></span></button>
                 </span>
             </div>
         </form>
@@ -54,9 +54,9 @@
         {% if role == 'member' %}
             <form action="{% url 'list_members' list.list_id role %}" method="post" id="unsubscribe-form">
             {% csrf_token %}
-            <input type="submit" class="hidden" />
+            <input type="submit" class="d-none" />
             <div class="pull-right">
-                <a href="{% url 'csv_view' list.list_id %}" class="btn btn-default">
+                <a href="{% url 'csv_view' list.list_id %}" class="btn btn-primary">
                    {% trans 'CSV Export' %}
                 </a>
                 <button class="btn btn-warning" id="unsubscribe-selected-btn">Unsubscribe Selected</button>
