--- a/src/postorius/templates/postorius/lists/settings.html
+++ b/src/postorius/templates/postorius/lists/settings.html
@@ -11,10 +11,10 @@
 
     {% list_nav 'list_settings' 'msgid:title:list_settings' %}
 
-    <ul class="nav nav-tabs margin-bottom" role="tablist">
+    <ul class="nav nav-tabs margin-bottom navbar-light" role="tablist">
         {% for section in section_names %}
-        <li role="tab" {% if section.0 == visible_section %}class="active"{% endif %}>
-          <a href="{% url 'list_settings' list_id=list.list_id visible_section=section.0 %}">
+        <li role="tab" class="nav-item">
+          <a href="{% url 'list_settings' list_id=list.list_id visible_section=section.0 %}" class="nav-link {% if section.0 == visible_section %}active{% endif %} ">
             {{ section.1 }}
           </a>
         </li>
